--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Custom (project specific)
+*.lp
+*.glp
+*.json
+*.dat
+*.md
+*.pdf
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
